[gd_scene load_steps=8 format=3 uid="uid://umbmtow43bhm"]

[ext_resource type="Script" uid="uid://cvyqt2k2fdaka" path="res://scripts/finding_words_cutscene.gd" id="1_cutscene"]
[ext_resource type="Texture2D" uid="uid://cmwg15mrnnfwy" path="res://Assets/Images/finding_words_bg.png" id="2_background"]
[ext_resource type="Texture2D" uid="uid://f65jlmr8kv0p" path="res://Assets/Images/SunnyWave.png" id="3_character"]
[ext_resource type="AudioStream" uid="uid://cd3s2nkeijomp" path="res://Assets/Audio/Background1.mp3" id="4_dm1hf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dialogue"]
bg_color = Color(1, 1, 1, 0.9)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.4, 0.2, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2, 0.7, 0.3, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_back"]
bg_color = Color(0.8, 0.4, 0.2, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.3, 0.1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="FindingWordsCutscene" type="Node2D"]
script = ExtResource("1_cutscene")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(577, 324)
scale = Vector2(0.818182, 0.813131)
texture = ExtResource("2_background")

[node name="Character" type="Sprite2D" parent="."]
position = Vector2(200, 350)
scale = Vector2(0.4, 0.45)
texture = ExtResource("3_character")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -194.0
offset_top = 48.0
offset_right = 306.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.2, 0.1, 0.05, 1)
theme_override_font_sizes/font_size = 32
text = "WORD ARCHAEOLOGY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialoguePanel" type="Panel" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -203.0
offset_top = -448.0
offset_right = 382.0
offset_bottom = -262.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_dialogue")

[node name="DialogueText" type="Label" parent="UI/DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.2, 0.1, 0.05, 1)
theme_override_font_sizes/font_size = 18
text = "Greetings, young archaeologist! I'm Dr. Sunny, and I need your help with an amazing discovery!"
vertical_alignment = 1
autowrap_mode = 3

[node name="ContinueButton" type="Button" parent="UI/DialoguePanel"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "Continue"

[node name="BackButton" type="Button" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 465.0
offset_top = -302.0
offset_right = 553.0
offset_bottom = -273.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_back")
text = "Back"

[node name="SkipButton" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.5, 0.3, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Skip"
flat = true

<<<<<<< HEAD
[node name="audio" type="Node2D" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="audio"]
=======
[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
>>>>>>> d82c90b2235a0ebab599504baf2006a1387f1547
stream = ExtResource("4_dm1hf")
volume_db = -20.0
autoplay = true

<<<<<<< HEAD
[node name="IntroAudio" type="AudioStreamPlayer2D" parent="audio"]
position = Vector2(640, 360)
volume_db = -5.0

=======
>>>>>>> d82c90b2235a0ebab599504baf2006a1387f1547
[connection signal="pressed" from="UI/DialoguePanel/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="UI/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/SkipButton" to="." method="_on_skip_pressed"]
